Actualización para proyecto final

--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
 
         <div class="carrito__footer">
             <h3>Total: $ <span class="carrito__total">0</span></h3>
-            <button class="clear__carrito btn">remover carrito</button>
+            <button class="clear__carrito btn">vaciar carrito</button>
         </div>
       </div>
     </section>
 
     <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="./proyecto.js"></script>
+    <!-- SWAL -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
-</html>
+</html> 
