--- a/producto-detalles.html
+++ b/producto-detalles.html
@@ -47,7 +47,7 @@
 				<div class="detalles-content">
 					<h3>Cristales</h3>
 					
-						<p class="price"><b>Precio: </b> $55.00</p>
+						<p class="price"><b>Precio: </b> $5500</p>
 						<p class="description">
 							<b>Descripcion: </b> <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quae ad ex sint expedita perspiciatis odit eligendi! Et quia ex aperiam dolorum sunt omnis maiores. Repudiandae delectus iste exercitationem vel?</span>
 						</p>
@@ -100,12 +100,14 @@
 
         <div class="carrito__footer">
             <h3>Total: $ <span class="carrito__total">0</span></h3>
-            <button class="clear__carrito btn">remover carrito</button>
+            <button class="clear__carrito btn">vaciar carrito</button>
         </div>
       </div>
     </section>
     
 		<script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="./proyecto.js"></script>
+    <!-- SWAL -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
