Actualización para proyecto final

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="grid">
         <div class="category">
           <select id="category" onclick="categoryValue()">
-            <option value="">colores</option>
+            <option value="">Todas</option>
             <option value="rojo">Rojo</option>
             <option value="violeta">violeta</option>
             <option value="verde">verde</option>
